syntax = "proto3";

option csharp_namespace = "DionysosProtobuf";
package DionysosProtobuf;
import "google/protobuf/timestamp.proto";

service ArticleCrudService {
  rpc CreateArticle (Article) returns (BooleanReply);
  rpc ReadArticle (SimpleArticleRequest) returns (Article);
  rpc GetAllArticles (EmptyRequest) returns (ArticlesReply);
  rpc UpdateArticle (Article) returns (BooleanReply);
  rpc DeleteArticle (SimpleArticleRequest) returns (BooleanReply);
}

service ItemCrudService{
  rpc CreateItem (Item) returns (BooleanReply);
  rpc ReadItem (SimpleItemRequest) returns (Item);
  rpc GetAllItems (EmptyRequest) returns (ItemsReply);
  rpc UpdateItem (Item) returns (BooleanReply);
  rpc DeleteItem (SimpleItemRequest) returns (BooleanReply);
}

message EmptyRequest{
}

message BooleanReply{
  bool success = 1;
}

message Article{
  string ean = 1;
  string name = 2;
  string description = 3;
  string vendor = 4;
}

message SimpleArticleRequest{
  string ean = 1;
}

message ArticlesReply{
  repeated Article articles = 1;
}

message Item {
  int32 id = 1;
  google.protobuf.Timestamp bestBefore = 2;
  string Ean = 3;
}

message SimpleItemRequest{
  int32 id = 1;
}

message ItemsReply{
  repeated Item items = 1;
}
